--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <section class="container text-center my-5">
         <img src="selfie.jpg" alt="Dhruv Patel" class="profile-img">
         <h1 class="display-4">Dhruv Patel</h1>
-        <p class="lead">Web Developer | IT Student | Hackathon Enthusiast</p>
+        <p class="lead">Web Developer | IT Student </p>
     </section>
 
     <!-- Contact Section -->
