--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhruv Patel - Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@400;500&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
@@ -15,22 +18,27 @@
             margin: 0;
             padding: 0;
         }
+
         .navbar {
             background-color: #1e2a47;
         }
+
         .navbar a {
             color: #fff;
             font-size: 18px;
             padding: 14px 20px;
             font-weight: 500;
         }
+
         .navbar .navbar-brand {
             font-size: 2rem;
             font-family: 'Poppins', sans-serif;
         }
+
         .navbar-nav {
             margin-left: auto;
         }
+
         .section-title {
             font-size: 2.5rem;
             text-align: center;
@@ -38,21 +46,25 @@
             color: #fff;
             font-family: 'Poppins', sans-serif;
         }
+
         .card {
             margin: 20px 0;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
+
         .card-body {
             background-color: #1e2a47;
             padding: 20px;
             border-radius: 8px;
         }
+
         .profile-img {
             width: 200px;
             border-radius: 50%;
             margin: 20px 0;
         }
+
         .btn-primary {
             background-color: #ff64b3;
             border: none;
@@ -61,50 +73,64 @@
             font-weight: 500;
             transition: background-color 0.3s;
         }
+
         .btn-primary:hover {
             background-color: #ff3385;
         }
+
         .animated-btn {
             animation: bounce 2s infinite;
         }
+
         @keyframes bounce {
-            0%, 100% {
+
+            0%,
+            100% {
                 transform: translateY(0);
             }
+
             50% {
                 transform: translateY(-10px);
             }
         }
+
         footer {
             background-color: #1e2a47;
             color: #fff;
             padding: 20px;
         }
+
         .skills-section {
             text-align: center;
         }
+
         .skills-section img {
             width: 100px;
             margin: 20px;
             transition: transform 0.3s;
         }
+
         .skills-section img:hover {
             transform: scale(1.1);
         }
 
         /* Styles for <strong> tags to change color and size */
         strong {
-            color: #ff64b3; /* Bright pink color */
-            font-size: 1.2rem; /* Slightly larger text */
+            color: #ff64b3;
+            /* Bright pink color */
+            font-size: 1.2rem;
+            /* Slightly larger text */
         }
     </style>
 </head>
+
 <body>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#">Dhruv Patel</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -144,9 +170,12 @@
         <div class="card">
             <div class="card-body">
                 <p><strong>Phone:</strong> +91 90994 92577</p>
-                <p><strong>Email:</strong> <a href="mailto:d62077299@gmail.com" style="color: #ff64b3;">d62077299@gmail.com</a></p>
-                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/dhruv-rakeshkumar-patel-8b78992a5/" style="color: #ff64b3;">LinkedIn Profile</a></p>
-                <p><strong>GitHub:</strong> <a href="https://github.com/dhrupatel031205" style="color: #ff64b3;">GitHub Profile</a></p>
+                <p><strong>Email:</strong> <a href="mailto:d62077299@gmail.com"
+                        style="color: #ff64b3;">d62077299@gmail.com</a></p>
+                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/dhruv-rakeshkumar-patel-8b78992a5/"
+                        style="color: #ff64b3;">LinkedIn Profile</a></p>
+                <p><strong>GitHub:</strong> <a href="https://github.com/dhrupatel031205" style="color: #ff64b3;">GitHub
+                        Profile</a></p>
             </div>
         </div>
     </section>
@@ -157,7 +186,7 @@
         <div class="card">
 
 
-            
+
             <div class="card-body">
                 <p><strong>Jay Somnath School (2021-2023):</strong> 12th GSEB - PCM</p>
                 <p><strong>Total Marks (PCM):</strong> 211/300</p>
@@ -180,7 +209,8 @@
             <img src="mongodb-icon-1.svg" title="MERN Stack">
             <img src="nodejs-icon.svg" title="MERN Stack">
             <img src="java logo.svg" alt="Java" title="Java">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" alt="Python" title="Python">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" alt="Python"
+                title="Python">
         </div>
     </section>
 
@@ -189,9 +219,15 @@
         <h2 class="section-title">Certifications</h2>
         <div class="card">
             <div class="card-body">
-                <p><strong>Introduction to Java:</strong> <a href="https://www.coursera.org/account/accomplishments/verify/8WT2JXNA42AF" style="color: #ff64b3;">Link</a></p>
-                <p><strong>DSA with Java:</strong> <a href="https://www.coursera.org/account/accomplishments/verify/8WT2JXNA42AF" style="color: #ff64b3;">Link</a></p>
-                <p><strong>Introduction to MERN:</strong> <a href="https://www.simplilearn.com/free-mern-stack-program-skillup?utm_source=sharedcertificate&utm_medium=shared-course&utm_campaign=shared-certificate-course" style="color: #ff64b3;">Link</a></p>
+                <p><strong>Introduction to Java:</strong> <a
+                        href="https://www.coursera.org/account/accomplishments/verify/8WT2JXNA42AF"
+                        style="color: #ff64b3;">Link</a></p>
+                <p><strong>DSA with Java:</strong> <a
+                        href="https://www.coursera.org/account/accomplishments/verify/8WT2JXNA42AF"
+                        style="color: #ff64b3;">Link</a></p>
+                <p><strong>Introduction to MERN:</strong> <a
+                        href="https://www.simplilearn.com/free-mern-stack-program-skillup?utm_source=sharedcertificate&utm_medium=shared-course&utm_campaign=shared-certificate-course"
+                        style="color: #ff64b3;">Link</a></p>
             </div>
         </div>
     </section>
@@ -201,8 +237,10 @@
         <h2 class="section-title">Achievements</h2>
         <div class="card">
             <div class="card-body">
-                <p><strong>Hackerrank Profile:</strong> <a href="https://www.hackerrank.com/profile/d62077299" style="color: #ff64b3;">Profile Link</a></p>
-                <p><strong>Conding Ninjas:</strong> <a href="https://www.naukri.com/code360/profile/drpatel" style="color: #ff64b3;">Profile Link</a></p>
+                <p><strong>Hackerrank Profile:</strong> <a href="https://www.hackerrank.com/profile/d62077299"
+                        style="color: #ff64b3;">Profile Link</a></p>
+                <p><strong>Conding Ninjas:</strong> <a href="https://www.naukri.com/code360/profile/drpatel"
+                        style="color: #ff64b3;">Profile Link</a></p>
             </div>
         </div>
     </section>
@@ -212,7 +250,8 @@
         <h2 class="section-title">Hackathons</h2>
         <div class="card">
             <div class="card-body">
-                <p><strong>Tic Tech Toe 2k24 (27-29 Sept, 2024):</strong> Place: DAIICT, Gandhinagar. Developed EzClass with my team using MERN stack.</p>
+                <p><strong>Tic Tech Toe 2k24 (27-29 Sept, 2024):</strong> Place: DAIICT, Gandhinagar. Developed EzClass
+                    with my team using MERN stack.</p>
             </div>
         </div>
     </section>
@@ -233,6 +272,13 @@
         <p>&copy; 2025 Dhruv Patel. All rights reserved.</p>
     </footer>
 
+
+    <script>
+        import { injectSpeedInsights } from '@vercel/speed-insights';
+
+        injectSpeedInsights();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
