--- a/index.html
+++ b/index.html
@@ -21,19 +21,25 @@
             --card-glass-light: rgba(0, 0, 0, 0.04);
         }
 
-
         * {
             scroll-behavior: smooth;
             box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        html,
+        body {
+            overflow-x: hidden;
         }
 
         body {
             font-family: 'Poppins', sans-serif;
-            margin: 0;
             background: var(--background-dark);
             color: var(--text-dark);
             transition: background 0.3s, color 0.3s;
             position: relative;
+            line-height: 1.6;
         }
 
         body.light {
@@ -58,7 +64,7 @@
             z-index: 1001;
             background: var(--card-glass);
             border: none;
-            padding: 8px 10px;
+            padding: 10px;
             border-radius: 50%;
             color: white;
             cursor: pointer;
@@ -69,38 +75,29 @@
             color: #111;
         }
 
-        /* Hero Section with Small Image Left */
+        /* Hero Section */
         .hero-section {
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 3rem 2rem;
-            position: relative;
+            gap: 2rem;
+            flex-wrap: wrap;
+            text-align: center;
             z-index: 2;
         }
 
         .profile-box {
-            margin-right: 2rem;
-            flex-shrink: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-        }
-
-        .hero-img-small {
-            width: 160px;
-            height: 160px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 4px solid var(--primary-color);
-            box-shadow: 0 0 15px rgba(255, 78, 205, 0.4);
-            transition: transform 0.3s ease;
+            flex-shrink: 0;
         }
 
         .hero-img-large {
-            width: 350px;
-            height: 350px;
+            width: clamp(180px, 40vw, 350px);
+            height: clamp(180px, 40vw, 350px);
             border-radius: 50%;
             object-fit: cover;
             border: 4px solid var(--primary-color);
@@ -112,22 +109,18 @@
             transform: scale(1.08);
         }
 
+        .hero-text h1 {
+            font-size: clamp(2rem, 6vw, 3rem);
+            color: var(--primary-color);
+        }
+
         .hero-subtext {
             font-size: 1.1rem;
             max-width: 500px;
             margin-top: 0.75rem;
-            color: inherit;
         }
 
-        .hero-img-small:hover {
-            transform: scale(1.05);
-        }
-
-        .hero-text h1 {
-            font-size: 2.5rem;
-            color: var(--primary-color);
-        }
-
+        /* Button */
         .btn-glass {
             background-color: var(--primary-color);
             border: none;
@@ -146,7 +139,7 @@
         /* Section Titles & Cards */
         .section-title {
             text-align: center;
-            font-size: 2.5rem;
+            font-size: clamp(2rem, 4vw, 2.5rem);
             color: var(--primary-color);
             margin-bottom: 2rem;
         }
@@ -158,8 +151,6 @@
             margin-bottom: 30px;
             backdrop-filter: blur(10px);
             box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
-            z-index: 2;
-            position: relative;
         }
 
         body.light .glass-card {
@@ -173,10 +164,20 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 30px;
-            font-size: 3rem;
+            font-size: 2rem;
+            max-width: 100%;
+            overflow-x: hidden;
+            text-align: center;
         }
 
         /* Footer */
+        footer .social-icons {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            padding: 1rem;
+        }
+
         footer .social-icons a {
             font-size: 1.5rem;
             margin: 0 12px;
@@ -187,42 +188,11 @@
         footer .social-icons a:hover {
             transform: scale(1.2);
             color: #6246ea;
-            /* brighter hover */
         }
 
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .hero-section {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .profile-box {
-                margin: 0 0 1.5rem 0;
-            }
-
-            .hero-img-large {
-                height: 300px;
-                width: 300px;
-            }
-        }
-
-        #particles-js {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            height: 100%;
-            width: 100%;
-            z-index: -1;
-            pointer-events: none;
-        }
-
+        /* Typewriter */
         .typewriter {
             overflow: hidden;
-            /* border-right: 0.15em solid var(--primary-color); */
             white-space: nowrap;
             animation: typing 3.5s steps(40, end) infinite, blink-caret 0.75s step-end infinite;
             max-width: 100%;
@@ -255,6 +225,52 @@
                 border-color: var(--primary-color);
             }
         }
+
+        /* Media Queries */
+        @media (max-width: 992px) {
+            .hero-img-large {
+                width: 300px;
+                height: 300px;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .hero-section {
+                flex-direction: column;
+                padding: 2rem 1rem;
+            }
+
+            .hero-img-large {
+                width: 250px;
+                height: 250px;
+            }
+
+            .hero-text h1 {
+                font-size: 2rem;
+            }
+
+            .hero-subtext {
+                font-size: 1rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            #theme-toggle {
+                top: 10px;
+                right: 10px;
+                padding: 8px;
+            }
+
+            .hero-img-large {
+                width: 180px;
+                height: 180px;
+            }
+
+            .skills-grid {
+                font-size: 1.5rem;
+                gap: 15px;
+            }
+        }
     </style>
 </head>
 
@@ -263,20 +279,24 @@
     <div id="particles-js"></div>
     <button id="theme-toggle" aria-label="Toggle Theme"><i class="fas fa-moon"></i></button>
     <section
-        class="hero-section container d-flex flex-column flex-md-row align-items-center justify-content-center text-center text-md-start">
+        class="hero-section container d-flex flex-column flex-md-row align-items-center justify-content-center text-center text-md-start px-3">
         <!-- Left: Enlarged Profile Image -->
-        <div class="profile-box me-md-5 mb-4 mb-md-0" data-aos="fade-right">
+        <div class="profile-box mb-4 mb-md-0 me-md-5" data-aos="fade-right">
             <img src="selfie.jpg" alt="Dhruv Patel" class="hero-img-large" />
         </div>
 
         <!-- Right: Intro Text -->
         <div class="hero-text" data-aos="fade-left">
             <h1 class="typewriter">Hi, I'm Dhruv Patel 👋</h1>
-            <p class="hero-subtext">I'm a passionate IT student and developer specializing in full-stack MERN
-                applications, AI, and mobile apps. I'm constantly learning and building cool things.</p>
+            <p class="hero-subtext">
+                I'm a passionate IT student and developer specializing in full-stack MERN applications, AI, and mobile
+                apps.
+                I'm constantly learning and building cool things.
+            </p>
             <a href="#contact" class="btn btn-glass mt-3">Let's Connect</a>
         </div>
     </section>
+
     <!-- Skills Section -->
     <section id="skills" class="container py-5" data-aos="fade-up">
         <h1 class="section-title">Skills</h1>
@@ -412,7 +432,7 @@
             <a href="https://www.linkedin.com/in/dhruv-rakeshkumar-patel-8b78992a5/" target="_blank"><i
                     class="fab fa-linkedin-in"></i></a>
             <a href="https://github.com/dhrupatel031205" target="_blank"><i class="fab fa-github"></i></a>
-            
+
         </div>
         <p>&copy; 2025 Dhruv Patel. All rights reserved.</p>
     </footer>
