--- a/index.html
+++ b/index.html
@@ -309,7 +309,13 @@
             <i class="devicon-mongodb-plain colored"></i>
             <i class="devicon-java-plain colored"></i>
             <i class="devicon-python-plain colored"></i>
+            <i class="devicon-bootstrap-plain colored"></i>
+            <i class="devicon-android-plain colored"></i>
+            <i class="devicon-mysql-plain colored"></i>
+            <i class="devicon-kotlin-plain colored"></i>
+            <i class="devicon-firebase-plain colored"></i>
         </div>
+
     </section>
 
     <!-- Projects Section -->
